[package]
name = "echo"
version = "0.1.0"
edition = "2021"
authors = ["Huang Cheng <cheng@duck.com>"]
repository = "https://github.com/huangcheng/echo"

default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "echo"
path = "src/lib.rs"

[[bin]]
name = "server"

[dependencies]
chrono = "0.4.34"
tokio = { version = "1.36.0", features = ["full"] }
